--- a/index.html
+++ b/index.html
@@ -341,31 +341,35 @@
   //  Call Claude directly from browser (2025 style)
   // ────────────────────────────────────────────────
   async function callClaude(prompt) {
-    try {
-        
-       const response = await fetch("/.netlify/functions/claude", {
-          method: "POST",
-          headers: {
-            "Content-Type": "application/json",
-          },
-          body: JSON.stringify({
-            model: "claude-sonnet-4-5-20250929",
-            max_tokens: 1200,
-            messages: [{ role: "user", content: prompt }]
-          })
-        });
+   try {
+  const response = await fetch("/.netlify/functions/claude", {
+    method: "POST",
+    headers: {
+      "Content-Type": "application/json"
+    },
+    body: JSON.stringify({
+      model: "claude-sonnet-4-5-20250929",
+      max_tokens: 1200,
+      messages: [{ role: "user", content: prompt }]
+    })
+  });
 
-        if (!response.ok) {
-          const err = await response.json();
-          throw new Error(err.error?.message || `HTTP ${response.status}`);
-        }
+  if (!response.ok) {
+    const errData = await response.json();
+    throw new Error(errData.error?.message || `Proxy returned ${response.status}`);
+  }
 
-        const json = await response.json();
-        return json.content?.[0]?.text || "No content received.";
+  const json = await response.json();
 
-    } catch (err) {
-      return `**Error**\n${err.message}\n\n(API key exposed in browser — use only for personal testing!)`;
-    }
+  if (json.content && json.content[0] && json.content[0].text) {
+    return json.content[0].text;
+  }
+
+  return "```json\n" + JSON.stringify(json, null, 2) + "\n```";
+
+} catch (err) {
+  return `**Error**\n${err.message}`;
+}
   }
 
   // ────────────────────────────────────────────────
