--- a/index.html
+++ b/index.html
@@ -213,8 +213,8 @@
 
 <div class="container">
   <header>
-    <h1>AI Chat • Direct to Claude</h1>
-    <div class="subtitle">Modern UI • Tables • Code • No backend needed</div>
+    <h1>Welcome To Chatapimania</h1>
+    <div class="subtitle">Modern UI • Tables • Code • Representation</div>
   </header>
 
   <div class="chat-container">
